# remram-gateway

./: .gitignore  ASSUMPTIONS.md  Dockerfile  HANDOFF.md  README.md  go.mod
archive/runtime-snapshot/: docker-images.txt  docker-networks.txt  docker-ps.txt  docker-volumes.txt
cmd/gateway/: main.go
cmd/moltbox/: main.go  (+1 more)
deploy/: README.md
dev-manager/control-pane/: README.md  pyproject.toml
dev-manager/control-pane/src/remram_dev_manager_control_pane/: __init__.py  cli.py  config.py  diagnostics.py  errors.py  exit_codes.py  health.py  http_app.py  inspect_control.py  inspect_runtimes.py  inspect_shared_services.py  layout.py  log_paths.py  logging_setup.py  mcp_adapter.py  mcp_server.py  models.py  primitives.py  registry.py  registry_bootstrap.py  registry_store.py  service.py  status.py  target_resolution.py  versioning.py
dev-manager/control-pane/src/remram_dev_manager_control_pane/commands/: __init__.py  common.py  health.py  serve.py  status.py  targets.py  version.py
dev-manager/control-pane/tests/: test_cli.py  test_health.py  test_mcp.py  test_registry.py
docs/: remram-edge-design.md
moltbox/: moltbox-implementation-guide.md  moltbox-operator-runbook.md
moltbox/debug-service/: README.md  pyproject.toml
moltbox/debug-service/src/moltbox_debug_service/: __init__.py  __main__.py  flows.py  jobs.py  redaction.py  runtime.py  service.py
schemas/: remram-request-packet.schema.json
scripts/: README.md  bootstrap_remote_gateway.py  moltbox-bootstrap-wrapper.sh  moltbox-cli-wrapper.sh  provision-automation-ssh.sh
tests/: test_cli_v2.py
(+130 files in other folders)
