[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbox-debug-service"
version = "0.1.0"
description = "Controlled MCP debug service for the Moltbox runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "mcp[cli]>=1.0,<2",
]

[project.scripts]
moltbox-debug-service = "moltbox_debug_service.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
